fix(wraps): create base wrap before modifiers

--- a/scss/custom/tools/mixins/components/_wraps.scss
+++ b/scss/custom/tools/mixins/components/_wraps.scss
@@ -1,11 +1,28 @@
 /*------------------------------------*\
     WRAP MIXINS
 \*------------------------------------*/
-$wrap-widths: (
-  large: 1200px,
-  base: 960px,
-  small: 720px,
+@use "sass:map";
+
+$wrap-configs: (
+  ("name": large, "width": 1200px, "type": modifier),
+  ("name": base, "width": 960px, "type": base),
+  ("name": small, "width": 720px, "type": modifier),
 );
+
+$wrap-base-configs: ();
+$wrap-modifier-configs: ();
+
+@each $config in $wrap-configs {
+  @if map-get($config, "type") == "base" {
+    $wrap-base-configs: append($wrap-base-configs, $config);
+  }
+}
+
+@each $config in $wrap-configs {
+  @if map-get($config, "type") == "modifier" {
+    $wrap-modifier-configs: append($wrap-modifier-configs, $config);
+  }
+}
 
 @mixin wrap-margin {
   margin-inline-end: auto;
@@ -22,19 +39,4 @@ $wrap-widths: (
   width: 100%;
   @include wrap-margin;
   @include wrap-padding;
-}
-
-@mixin wrap-width($name){
-  $has-key: map-has-key($wrap-widths, $name);
-
-  @if $has-key == true {
-    max-width: map-get($wrap-widths, $name);
-  } @else {
-    @error "no key #{$name} in #{$wrap-widths}";
-  }
-}
-
-@mixin wrap($name) {
-  @include wrap-base;
-  @include wrap-width($name);
 }
